--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,19 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name="com.lpan.study.context.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name="com.lpan.study.context.MyApplication"
         android:theme="@style/AppTheme">
-        <activity android:name="com.lpan.study.activity.MainActivity">
+        <activity
+            android:name="com.lpan.study.activity.MainActivity"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -20,7 +24,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.lpan.study.activity.GoalActivity"/>
+        <activity
+            android:name="com.lpan.study.activity.GoalActivity"
+            android:screenOrientation="portrait"
+            />
     </application>
 
 </manifest>
