--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
 
         <activity
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:name="com.lpan.study.activity.GoalActivity"
             android:screenOrientation="portrait"
             />
