--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
 
+final RELEASE_APP_NAME = "lpan"
+final DEVELOP_APP_NAME = "lpan_dev"
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
@@ -11,10 +14,25 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    productFlavors {
+        dev {
+            applicationId 'com.test.lpanstudyrecord.dev'
+            resValue "string", "app_name", "lpan_dev"
+        }
+        production {
+            applicationId 'com.test.lpanstudyrecord'
+            resValue "string", "app_name", "lpan_rel"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            applicationIdSuffix '.debug'
         }
     }
 }
