--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/JiemoTheme">
+
         <activity
-            android:name="com.lpan.study.activity.MainActivity"
+            android:theme="@style/SplashTheme"
+            android:name="com.lpan.study.activity.SplashActivity"
             android:screenOrientation="portrait"
             >
             <intent-filter>
@@ -22,6 +24,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.lpan.study.activity.MainActivity"
+            android:screenOrientation="portrait"
+            >
         </activity>
 
         <activity
