--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,10 @@ dependencies {
         exclude group : 'com.android.support'
     }
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
+
+    //brvah recyclerview
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+
+    //glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
