--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
         maven {
             url 'https://dl.bintray.com/hpdx/maven/'
         }
+        maven { url "https://jitpack.io" }
     }
 }
 
