--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,22 +8,31 @@ android {
     buildToolsVersion "24.0.3"
     defaultConfig {
         applicationId "com.test.lpanstudyrecord"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        jackOptions {
+            enabled true
+        }
     }
 
-    productFlavors {
-        dev {
-            applicationId 'com.test.lpanstudyrecord.dev'
-            resValue "string", "app_name", "lpan_dev"
-        }
-        production {
-            applicationId 'com.test.lpanstudyrecord'
-            resValue "string", "app_name", "lpan_rel"
-        }
+//    productFlavors {
+//        dev {
+//            applicationId 'com.test.lpanstudyrecord.dev'
+//            resValue "string", "app_name", "lpan_dev"
+//        }
+//        production {
+//            applicationId 'com.test.lpanstudyrecord'
+//            resValue "string", "app_name", "lpan_rel"
+//        }
+//    }
+
+    // java版本
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     buildTypes {
@@ -33,6 +42,17 @@ android {
         }
         debug {
             applicationIdSuffix '.debug'
+        }
+    }
+
+    task hello {
+        description 'just for test'
+        println 'hello world111'
+        doLast{
+            println'hello'
+        }
+        doFirst{
+            println'world'
         }
     }
 }
@@ -48,6 +68,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
     compile project(':optroundcardview')
+    compile 'com.android.support:design:25.3.1'
 
     //滑动动画
     compile 'com.facebook.rebound:rebound:0.3.8'
@@ -63,4 +84,5 @@ dependencies {
 
     //glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
 }
