--- a/FFmpegAndroid/build.gradle
+++ b/FFmpegAndroid/build.gradle
@@ -128,12 +128,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 24
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 24
     }
 
     sourceSets.main {
