--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,19 @@ freeline.py
 freeline/
 freeline/*
 freeline_project_description.json
+
+# Log Files
+*.log
+
+# Android Studio Navigation editor temp files
+.navigation/
+
+# Android Studio captures folder
+captures/
+
+# Intellij
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/dictionaries
+.idea/libraries
