--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,4 @@ freeline_project_description.json
 captures/
 
 # Intellij
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+.idea/*
