--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.antfortune.freeline'
+apply plugin: 'org.greenrobot.greendao' // 添加应用依赖插件
 
 final RELEASE_APP_NAME = "lpan"
 final DEVELOP_APP_NAME = "lpan_dev"
@@ -58,6 +59,15 @@ android {
     }
 }
 
+greendao{
+    //数据库的schema版本，也可以理解为数据库版本号
+    schemaVersion 2
+    //设置DaoMaster、DaoSession、Dao包名，也就是要放置这些类的包的全路径。
+    daoPackage 'com.lpan.study.greendao'
+    //设置DaoMaster、DaoSession、Dao目录
+    targetGenDir 'src/main/java'
+}
+
 dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -105,4 +115,7 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+    //greeddao
+    compile 'org.greenrobot:greendao:3.2.2' // 添加库
 }
