--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,7 @@ allprojects {
         jcenter()
         mavenCentral()
 
-        maven {
-            url 'https://dl.bintray.com/hpdx/maven/'
-        }
+        maven { url 'https://dl.bintray.com/hpdx/maven/' }
         maven { url "https://jitpack.io" }
         google()
     }
