--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,11 @@ android {
 //        }
 //    }
 
-    // java版本
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_8
-//        targetCompatibility JavaVersion.VERSION_1_8
-//    }
+     //java版本
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     buildTypes {
         release {
@@ -89,12 +89,18 @@ dependencies {
     }
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
 
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    //okhttp
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
+
     //rxjava
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
-    //okhttp
-    compile 'com.squareup.okhttp:okhttp:2.7.1'
+    //gson
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     //logansquare
     compile 'com.bluelinelabs:logansquare:1.3.6'
