--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
     testCompile 'junit:junit:4.12'
     compile project(':FFmpegAndroid')
     compile files('libs/recyclerview-v7-24.0.0-sources.jar')
@@ -124,4 +126,7 @@ dependencies {
 
     //greeddao
     compile 'org.greenrobot:greendao:3.2.2' // 添加库
+
+    //
+    compile 'me.grantland:autofittextview:0.2.+'
 }
